@@ -1,3 +1,8 @@
+2005-07-22  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* src/legacy/icqt.py:
+	Fixed failure to import re.
+
 2005-07-21  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/tlib/oscar.py:
